# aha-moments

./: .gitignore  README.md  pyproject.toml
20260129_geometric-interpretation-of-linear-regression/: README.md  geometric-interpretation-of-linear-regression.html
20260131_Turing-pattern/: turing-pattern-batch.py  turing-pattern.py
20260214_Turing-the_Chemical_Basis_of_Morphogenesis/: 03_Turing-on-Turing-Patterns_Chemical-Reactions_EN.md  03_Turing-on-Turing-Patterns_Chemical-Reactions_ZH.md  04_Turing-on-Turing-Patterns_Symmetry-Breaking_Appendix_EN.md  04_Turing-on-Turing-Patterns_Symmetry-Breaking_EN.md  04_Turing-on-Turing-Patterns_Symmetry-Breaking_ZH.md  05_Turing-on-Turing-Patterns_Left-Handed-and-Right-Handed-Organisms_ZH.md  05_Turing-on-Turing-Patterns_Left-Handed-and-Right-Handed-Organisms_post_EN.md  06_Turing-on-Turing-Patterns_Ring_of_Cells_EN.md  06_Turing-on-Turing-Patterns_Ring_of_Cells_ZH.md  notes_on_the_Chemical_Basis_of_Morphogenesis.ipynb
